# glucmon

./: README.md  index.html  package-lock.json  package.json  settings.html  tailwind.config.js
.github/actions/: release.yaml
.github/workflows/: release.yaml
src/: App.vue  Settings.vue  settings.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_data.rs  error.rs  icon_utils.rs  main.rs  nightscout.rs
src-tauri/src/commands/: config_commands.rs  mod.rs
src-tauri/src/utils/: create_icon_from_path.rs  get_error_icon.rs  get_icon_path_from_direction.rs  mod.rs
src/components/: SettingsForm.vue
